# solana-escrow-demo

./: .env_sample  .gitignore  README.md  package.json
client/: escrow.ts  simulateInitEscrow.ts
client/programs/: escrow.ts  program.ts
client/schema/: metadata.ts
client/utils/: info.ts
rust/: Cargo.toml
rust/escrow/program/: Cargo.toml
rust/escrow/program/src/: error.rs  instruction.rs  processor.rs  state.rs
